--- a/umpkg.cfg
+++ b/umpkg.cfg
@@ -1,6 +1,6 @@
 [umpkg]
 srcdir = $PWD
-git_repo = 
+git_repo = https://gitlab.ultramarine-linux.org/dist-pkgs/ultramarine-backgrounds.git
 git_ref = 
 build_script = 
 build_mode = local
